# betterTUI

./: .gitignore  README.md  Session.vim  mkdocs.yml  pyproject.toml  test.py
betterTUI/: Screen.py  Wrapper.py  __init__.py
betterTUI/Basic/: Box.py  Button.py  Counter.py  File.py  Input.py  Line.py  Select.py  SlimButton.py  Text.py  TextArea.py  __init__.py
betterTUI/Complex/: Form.py  SearchBar.py
docs/: conf.py  index.md
docs/_build/doctrees/: README.doctree
easyTUI/: Screen.py  Wrapper.py  docs.md
easyTUI/Basic/: Box.py  Button.py  Counter.py  Input.py  Line.py  Select.py  Text.py  __init__.py
easyTUI/Complex/: Form.py  __init__.py
examples/musicPlayer/: globals.py  main.py  screens.py
examples/spotifyTUI/: main.py  screens.py
site/: 404.html  index.html  search.html
site/search/: search_index.json
tests/: pyproject.toml  socket_client.py  socket_server.py  test.py
tests/betterTUI/: Screen.py  Wrapper.py
tests/betterTUI/Basic/: Select.py  Text.py
