[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "betterTUI"
version = "0.0.11"
authors = [
  { name="Oscar Gomez (Raxo)", email="oscargomez.raxo@gmail.com" },
]
description = "collection of curses widgets for building TUI's"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/Gomez0015/easyTUI"
"Bug Tracker" = "https://github.com/Gomez0015/easyTUI/issues"